# Akinator-Anime-ML

./: .gitignore  CHARACTERS.md  README.md  main.py  next.config.ts  package.json  play_test.py  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  test_ingestion.py
app/: globals.css  layout.tsx  page.tsx
app/api/answer/: route.ts
app/api/characters/: route.ts
app/api/start/: route.ts
data/: processed_characters.csv  tree_logic.txt
lib/: engine.ts
scripts/: extract_names.mjs  extract_names.py
src/: data_ingestion.py  engine.py  train_model.py
